[package]
name = "neoview-macro"
description = "neoview proc macros"
version = "0.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/aliibrahim123/neoview.rs"
documentation = "https://docs.rs/neoview/"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.46"
proc-macro2 = "1.0.106"
