[package]
name = "neoview"
description = "a lightweight, agnostic and safe declarative UI framework"
edition = "2024"
version = "0.0.1"
readme = "../readme.md"
license = "MIT"
repository = "https://github.com/aliibrahim123/neoview.rs"
documentation = "https://docs.rs/neoview/"

[lib]
doctest = false

[dependencies]
rustc-hash = "2.1.2"
