[package]
name = "neoview"
description = "a reactive, lightweight and safe declarative UI framework"
edition = "2024"
version = "0.0.3"
readme = "./readme.md"
license = "MIT"
repository = "https://github.com/aliibrahim123/neoview.rs"
documentation = "https://docs.rs/neoview/"

[lib]
doctest = false

[dependencies]
rustc-hash = "2.1.2"
slotmap = "1.1.1"
smallvec = "1.15.1"
neoview-macro = { path = "../macro", version = "0.0.2" }
