[package]
name = "neoview-web"
description = "the web flavor of neoview"
edition = "2024"
version = "0.0.1"
readme = "../readme.md"
license = "MIT"
repository = "https://github.com/aliibrahim123/neoview.rs"
documentation = "https://docs.rs/neoview-web/"

[lib]
doctest = false

[features]
default = ["css-types"]
html-types = []
css-types = ["html-types"]

[dependencies]
neoview = { path = "../neoview", version = "0.0.1" }
rustc-hash = "2.1.2"
slotmap = "1.1.1"
wasm-bindgen = "0.2.122"
web-sys = { version = "0.3.99", features = ["Element", "Document", "Window"] }
