[package]
name = "neoview-web"
description = "the web flavor of neoview"
edition = "2024"
version = "0.0.5"
license = "MIT"
repository = "https://github.com/aliibrahim123/neoview.rs"
documentation = "https://docs.rs/neoview-web/"

[lib]
doctest = false

[features]
html-types = []
css-types = ["html-types"]

[dependencies]
neoview = { path = "../neoview", version = "0.0.5" }
neoview-macro = { path = "../macro", version = "0.0.3" }
neoview-web-macro = { path = "../web-macro", version = "0.0.2" }
rustc-hash = "2.1.3"
slotmap = "1.1.1"
wasm-bindgen = "0.2.126"
web-sys = { version = "0.3.103", features = [
	"Element",
	"Document",
	"Window",
	"DomTokenList",
	"HtmlElement",
	"CssStyleDeclaration",
	"Text",
	"Event",
] }
